# acow_sdl_goodies

./: .gitignore  CMakeLists.txt
acow/: sdl_goodies.h
acow/include/: Color.h  Destroy.h  Error.h  IMG.h  Renderer.h  SDL.h  SDLGoodies_Utils.h  Surface.h  TTF.h  Texture.h  Timer.h  Window.h
acow/include/Input/: SimpleInput.h  SimpleInput_Keycodes.h
acow/include/ttf/: Font.h
acow/src/: Error.cpp  IMG.cpp  Renderer.cpp  SDL.cpp  TTF.cpp  Texture.cpp  Window.cpp
acow/src/Input/: SimpleInput.cpp
